--- a/index.html
+++ b/index.html
@@ -10,9 +10,19 @@
             margin: 0;
             overflow: hidden;
         }
+        @font-face {
+            font-family: 'GardenFlower';
+            src: url(assets/fonts/GardenFlower.ttf);
+        }
+        .fontPreload {
+            font-family: 'GardenFlower';
+            position: absolute;
+            left: -100px;
+        }
     </style>
 </head>
 <body>
+    <div class="fontPreload">.</div>
     <script src="assets/scripts/phaser.js"></script>
     <script src="assets/scripts/Card.js"></script>
     <script src="assets/scripts/GameScene.js"></script>
