--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
     <title>Memory Game</title>
     <style>
         body {
@@ -24,7 +25,9 @@
 <body>
     <div class="fontPreload">.</div>
     <script src="assets/scripts/phaser.js"></script>
+    <script src="assets/scripts/utils.js"></script>
     <script src="assets/scripts/Card.js"></script>
+    <script src="assets/scripts/LevelCompleteScene.js"></script>
     <script src="assets/scripts/GameScene.js"></script>
     <script src="assets/scripts/main.js"></script>
 </body>
